platform/kustomize/base/corpshared-plat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drr-corpshared-plat
  labels:
    darueira.io/tier: enterprise-shared
    darueira.io/plane: control-plane-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
