platform/kustomize/base/corpshared-plat/iam-authz-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drr-iam-authz-svc
  namespace: drr-corpshared-plat
  labels:
    app.kubernetes.io/name: drr-iam-authz-svc
    app.kubernetes.io/component: authz-gateway
    darueira.io/tier: enterprise-shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drr-iam-authz-svc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drr-iam-authz-svc
        darueira.io/tier: enterprise-shared
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: iam-authz-svc
          image: localhost:8082/drr-iam-authz-svc:v1alpha1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: drr-iam-authz-svc
  namespace: drr-corpshared-plat
  labels:
    app.kubernetes.io/name: drr-iam-authz-svc
    darueira.io/tier: enterprise-shared
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: drr-iam-authz-svc
  ports:
    - port: 8080
      targetPort: 8080
      name: http
