platform/kustomize/base/corpshared-plat/nexus-oss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-oss
  namespace: drr-corpshared-plat
  labels:
    app.kubernetes.io/name: nexus-oss
    darueira.io/tier: enterprise-shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nexus-oss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nexus-oss
        darueira.io/tier: enterprise-shared
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 200
        runAsGroup: 200
        fsGroup: 200
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nexus
          image: sonatype/nexus3:3.68.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8081
              name: http
            - containerPort: 8082
              name: docker-registry
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 3072Mi
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-oss
  namespace: drr-corpshared-plat
  labels:
    app.kubernetes.io/name: nexus-oss
    darueira.io/tier: enterprise-shared
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nexus-oss
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32081
      name: http
    - port: 8082
      targetPort: 8082
      nodePort: 32082
      name: docker-registry
