platform/kustomize/base/corpshared-plat/webmail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webmail
  namespace: drr-corpshared-plat
  labels:
    app.kubernetes.io/name: webmail
    darueira.io/tier: enterprise-shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webmail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webmail
        darueira.io/tier: enterprise-shared
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: webmail
          image: roundcube/roundcubemail:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 384Mi
          volumeMounts:
            - name: ca-bundle-vol
              mountPath: /etc/ssl/certs/darueira-ca.pem
              subPath: ca.crt
            - name: apache-config-vol
              mountPath: /etc/apache2/ports.conf
              subPath: ports.conf
            - name: apache-config-vol
              mountPath: /etc/apache2/sites-available/000-default.conf
              subPath: 000-default.conf
            - name: roundcube-custom-config-vol
              mountPath: /var/roundcube/config/custom.php
              subPath: custom.php
      volumes:
        - name: ca-bundle-vol
          secret:
            secretName: darueira-wildcard-tls
        - name: apache-config-vol
          configMap:
            name: webmail-apache-config
        - name: roundcube-custom-config-vol
          configMap:
            name: webmail-roundcube-config
---
apiVersion: v1
kind: Service
metadata:
  name: webmail
  namespace: drr-corpshared-plat
  labels:
    app.kubernetes.io/name: webmail
    darueira.io/tier: enterprise-shared
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: webmail
  ports:
    - port: 80
      targetPort: 8080
      name: http
